[package]
name = "rust-mysql-redis-client-usage"
version = "0.1.0"
authors = ["dekokun <dekokun@hatena.ne.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.20.*"
lazy_static = "1.4.0"
actix-web = "3"
async-std = { version = "1.6", features = [ "attributes" ] }

[dependencies.mysql]
version = "20.1.0"


[dependencies.sqlx]
version = "0.3"
features = ["mysql"]

